--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "json-server": "^0.14.2",
     "rxjs": "~6.3.3",
     "tether": "^1.4.5",
     "zone.js": "~0.8.26"
